--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,98 @@
 @import url(https://fonts.googleapis.com/css?family=Pixelify+Sans:regular,500,600,700);
 
+/* Themes */
 
+:root {
+  --primary-color: #111;
+  --secondary-color: #FAF0F0;
+  --accent-color: #770f0f;
+  --background-light: #FAF0F0;
+  --background-dark: #050036;
+  --text-light: #FAF0F0;
+  --text-dark: #111;
+}
+
+[data-theme="light"] {
+  background-color: var(--background-light);
+  color: var(--text-dark);
+}
+
+[data-theme="dark"] {
+  background-color: var(--background-dark);
+  color: var(--text-light);
+}
+
+/* Dark and Light Mode toggle */
+#theme-toggle-container {
+    position: fixed;
+    top: 15%;
+    left: 5%;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 1000;
+    color: var(--text-dark);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+#theme-toggle-button+label {
+
+  position: relative;
+  display:block;
+  background:#ebebeb;
+  border-radius: 100px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.4),inset 0 -5px 15px rgba(0,255,255,0.4);
+  width: 120px;
+  height: 60px;
+  cursor: pointer;
+  
+  
+}
+
+#theme-toggle-button+label::after {
+  content: '';
+  width: 50px;
+  height: 50px;
+  background: linear-gradient(180deg,#ffcc89,#d8860b);
+  border-radius: 190px;
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.4);
+  transition: left 0.3s ease;
+  transform: translateY(-50%);
+}
+
+#theme-toggle-button + label {
+  background-color: #242424;
+  transition: 0.5s;
+}
+
+#theme-toggle-button{
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+
+#theme-toggle-button:checked + label::after {
+  left: 100%;
+  transform: translateX(-100%);
+  background: linear-gradient(180deg,#777,#3a3a3a);
+  transform: translateX(-100%) translateY(-50%);
+
+}
+
+#theme-toggle-button+label:active::after {
+  width: 68px;
+  transition: 0.5s;
+}
+
+
+
+/* General Styles */
 header{
     width: 100%;
     height: 15vh;
@@ -16,17 +108,13 @@ header{
     top:0%;
     /* background-color: rgba(inherit, 0.4); */
     backdrop-filter: blur(20px);
-
 }
+
 
 
 body{
     font-family: pixelify sans;
-}
 
-.light-mode {
-    background-color: #FAF0F0;
-    color: #111;
 }
 
 main{
@@ -50,6 +138,12 @@ width: 40%;
     width: 25%;
     
 }
+nav >a{
+    color: var(--text-light);
+}
+svg>path{
+    fill: var(--text-light);
+}
 #header_logo{
     width: 20%;
     margin: 5% ;
@@ -57,10 +151,6 @@ width: 40%;
 
 svg:hover{
     cursor:pointer;
-}
-
-a{
-    color: white;
 }
 
 nav>a{
